# cedanirs

./: .gitignore  CLAUDE.md  README.md  example.py  example_group.py  publish.py  pyproject.toml  requirements.txt
cedanirs/: __init__.py  _version.py  api.py  preprocessor.py  tables.py  test.py
cedanirs/core/: __init__.py  exceptions.py  group.py  registry.py  result.py  timeseries.py
cedanirs/estimators/: __init__.py  base.py
cedanirs/estimators/effective/: __init__.py  granger.py
cedanirs/estimators/functional/: __init__.py  coherence.py  partial.py  pearson.py  spearman.py
cedanirs/graph/: __init__.py
cedanirs/io/: __init__.py  snirf.py
cedanirs/preprocessing/: __init__.py  preprocessor.py
cedanirs/report/: group.py
cedanirs/stats/: __init__.py  _results.py  group.py  significance.py  transforms.py
cedanirs/viz/: __init__.py  matrix.py  poster.py
docs/: OUTPUT_FORMAT.md  info.md
examples/: generate_outputs.py
examples/output/: group_report.txt  nbs_components.csv  nodal_metrics.csv  significant_edges.csv
examples/sivert_writing/: README.md  run_connectivity.py  run_granger.py  run_wavelet.py
examples/sivert_writing/output/: loading_log.txt  summary.txt
examples/sivert_writing/output/contrasts/: handwriting_vs_ipad_edges.csv  handwriting_vs_keyboard_edges.csv  handwriting_vs_remarkable_edges.csv  ipad_vs_keyboard_edges.csv  ipad_vs_remarkable_edges.csv  keyboard_vs_remarkable_edges.csv
examples/sivert_writing/output/per_condition/: handwriting_report.txt  handwriting_significant_edges.csv  ipad_report.txt  ipad_significant_edges.csv  keyboard_report.txt  keyboard_significant_edges.csv  remarkable_report.txt  remarkable_significant_edges.csv
examples/sivert_writing/output_granger/: loading_log.txt  summary.txt
examples/sivert_writing/output_granger/contrasts/: handwriting_vs_ipad_edges.csv  handwriting_vs_keyboard_edges.csv  handwriting_vs_remarkable_edges.csv  ipad_vs_keyboard_edges.csv  ipad_vs_remarkable_edges.csv  keyboard_vs_remarkable_edges.csv
examples/sivert_writing/output_granger/per_condition/: handwriting_report.txt  handwriting_significant_edges.csv  ipad_report.txt  ipad_significant_edges.csv  keyboard_report.txt  keyboard_significant_edges.csv  remarkable_report.txt  remarkable_significant_edges.csv
examples/sivert_writing/output_wavelet/: summary.txt
examples/sivert_writing/output_wavelet/contrasts/: handwriting_vs_ipad_edges.csv  handwriting_vs_keyboard_edges.csv  handwriting_vs_remarkable_edges.csv  ipad_vs_keyboard_edges.csv  ipad_vs_remarkable_edges.csv  keyboard_vs_remarkable_edges.csv
examples/sivert_writing/output_wavelet/per_condition/: handwriting_report.txt  handwriting_significant_edges.csv  ipad_report.txt  ipad_significant_edges.csv  keyboard_report.txt  keyboard_significant_edges.csv  remarkable_report.txt  remarkable_significant_edges.csv
nirconn/: __init__.py  api.py  tables.py
nirconn/core/: __init__.py  exceptions.py  group.py  registry.py  result.py  timeseries.py  types.py
nirconn/estimators/: __init__.py  base.py
nirconn/estimators/effective/: __init__.py  granger.py
nirconn/estimators/functional/: __init__.py  coherence.py  plv.py  wavelet_coherence.py
nirconn/graph/: __init__.py  metrics.py
nirconn/io/: __init__.py  snirf.py
nirconn/preprocessing/: __init__.py  preprocessor.py
nirconn/report/: __init__.py  group.py
nirconn/stats/: __init__.py  _results.py  group.py  surrogates.py
nirconn/viz/: __init__.py  matrix.py  poster.py
tests/: conftest.py  test_estimators.py  test_graph.py  test_group.py  test_io.py  test_pearson.py  test_preprocessor.py  test_registry.py  test_result.py  test_stats.py  test_surrogates.py  test_timeseries.py  test_viz.py
