[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cedanirs"
version = "0.0.1"
description = "A wrapper around cedalion for streamlined fNIRS preprocessing and analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Adam Emile Aske", email = "adask2429@oslomet.no" }]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = ["numpy", "xarray", "matplotlib", "cedalion"]

[project.urls]
Homepage = "https://github.com/adamaske/cedanirs"
"Bug Tracker" = "https://github.com/adamaske/cedanirs/issues"

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[tool.pytest.ini_options]
log_cli            = true
log_cli_level      = "DEBUG"
log_cli_format     = "%(asctime)s | %(levelname)-8s | %(name)s | %(message)s"
log_cli_date_format = "%H:%M:%S"
log_file           = "logs/tests.log"
log_file_level     = "DEBUG"
log_file_format    = "%(asctime)s | %(levelname)-8s | %(name)s | %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.setuptools.packages.find]
where = ["."]
include = ["cedanirs*"]
