[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nirconn"
description = "Functional and effective connectivity analysis for fNIRS data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Adam Emile Aske", email = "adask2429@oslomet.no" }]
keywords = [
  "fNIRS",
  "connectivity",
  "functional-connectivity",
  "effective-connectivity",
  "neuroimaging",
  "brain-networks",
  "graph-theory",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dynamic = ["version"]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "xarray>=2023.1",
  "pandas>=1.5",
  "matplotlib>=3.6",
  "networkx>=3.0",
]

[project.optional-dependencies]
# Heavy I/O backends for loading raw recordings.
io = ["mne>=1.5", "mne-nirs>=0.6", "snirf", "h5py"]
cedalion = ["cedalion"]
# Effective-connectivity methods (Granger, etc.).
effective = ["statsmodels>=0.14"]
# Rich report rendering.
report = ["jinja2>=3.0"]
dev = ["pytest>=7", "pytest-cov", "black", "ruff", "mypy"]
docs = ["sphinx>=7", "furo", "myst-parser", "numpydoc"]
all = [
  "nirconn[io,effective,report]",
]

[project.urls]
Homepage = "https://github.com/adamaske/nirconn"
"Bug Tracker" = "https://github.com/adamaske/nirconn/issues"

[tool.setuptools.dynamic]
version = { attr = "nirconn._version.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["nirconn*"]

[tool.setuptools.package-data]
nirconn = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli            = true
log_cli_level      = "INFO"
log_cli_format     = "%(asctime)s | %(levelname)-8s | %(name)s | %(message)s"
log_cli_date_format = "%H:%M:%S"
log_file           = "logs/tests.log"
log_file_level     = "DEBUG"
log_file_format    = "%(asctime)s | %(levelname)-8s | %(name)s | %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff]
line-length = 90
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.black]
line-length = 90

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
